--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,19 @@
 version: 2.1
 
-orbs:
-  python: circleci/python@0.2.1
-
 jobs:
   build-and-test:
-    executor: python/default
+    docker:
+        - image: circleci/python:3.8
     steps:
       - checkout
       - python/load-cache
       - python/install-deps
       - python/save-cache
       - run:
-          command: ./manage.py test
+          command: ./test_app.py test
           name: Test
 
 workflows:
   main:
     jobs:
       - build-and-test
-
