--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,19 @@ jobs:
         - image: circleci/python:3.8
     steps:
       - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
       - run:
-          command: ./test_app.py test
-          name: Test
-
+          command: |
+            echo 'export PATH=~$PATH:~/.local/bin' >> $BASH_ENV && source $BASH_ENV
+            pip install --user -r requirements.txt
+          name: Python Dependencies
+      - run:
+          command: |
+            pytest --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
+          name: Unit Test
+      - store_test_results:
+          path: test-reports
+      - store_artifacts:
+          path: test-reports
 workflows:
   main:
     jobs:
