--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,8 @@ jobs:
             pip install --user -r requirements.txt
           name: Python Dependencies
       - run:
-          command: |
-            pytest --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
+          command: ./test_app.py test
           name: Unit Test
-      - store_test_results:
-          path: test-reports
-      - store_artifacts:
-          path: test-reports
 workflows:
   main:
     jobs:
