--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,10 @@ jobs:
       - run:
           command: python test_app.py
           name: Unit Test
+      - store_test_results:
+          path: test-reports
+      - store_artifacts:
+          path: test-reports
 workflows:
   main:
     jobs:
